# serply-python

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: release.yml  serply-python.yml  tests.yml
serply/: __init__.py  consts.py  serply.py
tests/: test_serply_class.py  test_serply_crawl.py  test_serply_error.py  test_serply_image.py  test_serply_job.py  test_serply_maps.py  test_serply_news.py  test_serply_product.py  test_serply_proxy_location.py  test_serply_scholar.py  test_serply_search.py  test_serply_serp.py  test_serply_video.py
